--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -179,15 +179,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_5:_Einheiten">Abschnitt 5: Einheiten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Units_00.png&amp;filetimestamp=20221021104319&amp;.html" class="mw-file-description" title="FCInfo Einheiten"><img alt="FCInfo Einheiten" src="../File/Macro_FCInfo_Units_00.png" decoding="async" width="397" height="126" class="mw-file-element" data-file-width="397" data-file-height="126"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">mm  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Wenn es sich bei dem Objekt um einen Fl&auml;chenumfang handelt, wird die L&auml;nge des Objekts angezeigt. Die Einheitengr&ouml;&szlig;e kann ausgew&auml;hlt werden: <br>km, hm, dam, m, dm, cm, <b>mm</b>, &micro;m, nm, pm, fm, Zoll, Link, Fu&szlig;, Yard, Perch, Kette, Furlong, Meile, Liga, Seemeile.</li>
 <li>L&auml;nge des Objekts: L&auml;nge des Objekts oder Umfang der Fl&auml;che <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10,0 mm</span>.</li>
 <li>Wenn das Objekt ein Kreis ist, wird eine zweite Zeile <b>Radius:</b> ge&ouml;ffnet, in der der Radius und der Durchmesser des Kreises angezeigt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.0 mm (dia. 4.0 mm)</span>.</li>
 <li>Umfang der Form (12). Umfang des Objekts und Anzahl der im Objekt enthaltenen Unterobjekte (Kanten) <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">120,0 mm</span>.</li></ul>
-<p><i>(Die Variable kann auf <code>false</code> gesetzt werden. <b>switch_setVisible_GBox_005_Value_Unit</b> zum Verstecken des Kastens)</i>
-</p>
-</div>
-<p><span id="Sector_6:_Inclination"></span>
+<p><i>(Die Variable <b>switch_setVisible_GBox_005_Value_Unit</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
+</p><p><span id="Sector_6:_Inclination"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_6:_Neigung">Abschnitt 6: Neigung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inclination_00.png&amp;filetimestamp=20221021104232&amp;.html" class="mw-file-description" title="FCInfo Neigung"><img alt="FCInfo Neigung" src="../File/Macro_FCInfo_Inclination_00.png" decoding="async" width="397" height="242" class="mw-file-element" data-file-width="397" data-file-height="242"></a></span>
@@ -739,13 +736,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119002847
+Cached time: 20260119003456
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.213 seconds
-Real time usage: 0.317 seconds
-Preprocessor visited node count: 1549/1000000
+CPU time usage: 0.182 seconds
+Real time usage: 0.231 seconds
+Preprocessor visited node count: 1548/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -755,19 +752,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.382      1 -total
-  6.75%    6.105     10 Template:CheckBox
-  6.18%    5.588     30 Template:False
-  5.85%    5.286     10 Template:Code
-  5.61%    5.074      8 Template:RadioButton
-  5.48%    4.957      1 Template:Codeextralink
-  5.14%    4.647      1 Template:Macro/de
-  5.00%    4.522     44 Template:LineEdit
-  4.78%    4.324     25 Template:Button
-  3.73%    3.371      5 Template:Clear
+100.00%   63.507      1 -total
+  7.03%    4.465     10 Template:Code
+  6.95%    4.412     44 Template:LineEdit
+  6.10%    3.874      8 Template:RadioButton
+  5.25%    3.337      1 Template:Macro/de
+  4.69%    2.980      3 Template:Incode
+  4.59%    2.914     10 Template:CheckBox
+  3.77%    2.393      1 Template:Codeextralink
+  3.64%    2.314      5 Template:SpinBox
+  3.35%    2.128     25 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002846 and revision id 1740883. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003456 and revision id 1740885. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
