--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -258,16 +258,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_8:_Kosten">Abschnitt 8: Kosten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Cost_00.png&amp;filetimestamp=20221021121607&amp;.html" class="mw-file-description" title="FCInfo Kosten"><img alt="FCInfo Kosten" src="../File/Macro_FCInfo_Cost_00.png" decoding="async" width="398" height="92" class="mw-file-element" data-file-width="398" data-file-height="92"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Cost total&nbsp;: Gesamtkosten des ausgew&auml;hlten Objekts</li></ul>
 <p><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.027 Eu</span>
 </p>
 <ul><li>Price (kg/dm3)&nbsp;: Preis des ausgew&auml;hlten Materials (<i>Metal Aluminium (Al),2.7,</i><b>10.0</b><i>,adapt Price</i>)</li></ul>
 <p><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10,0000 Eu (by Kg)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span><br>
-<i>(Die Variable  <b>switch_setVisible_GBox_008_Cost_And_Price</b> auf <code>false</code> gesetzt werden, um den Kasten zu  verstecken)</i>
-</p>
-</div>
-<p><span id="Sector_9:_BoundBox"></span>
+<i>(Die Variable  <b>switch_setVisible_GBox_008_Cost_And_Price</b> auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
+</p><p><span id="Sector_9:_BoundBox"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_9:_Begrenzungsrahmen">Abschnitt 9: Begrenzungsrahmen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_BoundBox_00.png&amp;filetimestamp=20221021121719&amp;.html" class="mw-file-description" title="FCInfo Begrenzungsrahmen"><img alt="FCInfo Begrenzungsrahmen" src="../File/Macro_FCInfo_BoundBox_00.png" decoding="async" width="397" height="123" class="mw-file-element" data-file-width="397" data-file-height="123"></a></span>
@@ -733,13 +730,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119003639
+Cached time: 20260119003851
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.217 seconds
-Real time usage: 0.672 seconds
-Preprocessor visited node count: 1547/1000000
+CPU time usage: 0.208 seconds
+Real time usage: 0.543 seconds
+Preprocessor visited node count: 1546/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -749,19 +746,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  429.684      1 -total
- 66.90%  287.440     10 Template:Code
-  3.48%   14.965      3 Template:Incode
-  1.93%    8.300     44 Template:LineEdit
-  1.86%    7.991     25 Template:Button
-  1.81%    7.785     10 Template:CheckBox
-  1.73%    7.445      5 Template:SpinBox
-  1.34%    5.745     19 Template:True
-  1.26%    5.403      1 Template:CodeDownload
-  1.04%    4.449      4 Template:ComboBox
+100.00%  186.979      1 -total
+  9.43%   17.625     10 Template:Code
+  7.68%   14.352     19 Template:True
+  7.00%   13.089     10 Template:CheckBox
+  6.04%   11.292      8 Template:RadioButton
+  5.73%   10.713     25 Template:Button
+  5.18%    9.680     44 Template:LineEdit
+  3.59%    6.720      1 Template:CodeDownload
+  3.33%    6.220      4 Template:ComboBox
+  3.21%    6.002      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003638 and revision id 1740887. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003850 and revision id 1740889. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
