--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -269,7 +269,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_9:_Begrenzungsrahmen">Abschnitt 9: Begrenzungsrahmen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_BoundBox_00.png&amp;filetimestamp=20221021121719&amp;.html" class="mw-file-description" title="FCInfo Begrenzungsrahmen"><img alt="FCInfo Begrenzungsrahmen" src="../File/Macro_FCInfo_BoundBox_00.png" decoding="async" width="397" height="123" class="mw-file-element" data-file-width="397" data-file-height="123"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>BoundBox gibt extreme Abmessungen der Form an.
 <ul><li>maximum X length&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm</span></li>
 <li>maximum Y length&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">10.0 mm</span></li>
@@ -279,10 +278,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Volume</span>&nbsp;: Volumen mit den Abmessungen der Begrenzungsbox erstellen</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Text Dim.<span></span></span>&nbsp;: die Abmessungen des Dreiecks erstellen <i>(boundbox)</i></li>
 <li>Wenn das Kontrollk&auml;stchen <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Text Dim.<span></span></span> aktiviert ist, ist die Spinbox-Dimension des Textes <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">3.000  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> funktionsf&auml;hig, um den Wert anzugeben <i>(standardm&auml;&szlig;ig 3,0)</i>.</li></ul></li></ul>
-<p><i>(Die Variable kann auf <code>false</code> gesetzt werden. <b>switch_setVisible_GBox_009_BoundBox</b> zum verstecken des Rahmens)</i>
-</p>
-</div>
-<p><span id="Sector_10:_Center_of:"></span>
+<p><i>(Die Variable <b>switch_setVisible_GBox_009_BoundBox</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
+</p><p><span id="Sector_10:_Center_of:"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_10:_Zentrum_von:">Abschnitt 10: Zentrum von:</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Center_of_00.png&amp;filetimestamp=20221021104033&amp;.html" class="mw-file-description" title="FCInfo Zentrum von ..."><img alt="FCInfo Zentrum von ..." src="../File/Macro_FCInfo_Center_of_00.png" decoding="async" width="398" height="143" class="mw-file-element" data-file-width="398" data-file-height="143"></a></span>
@@ -730,13 +727,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119003851
+Cached time: 20260119004026
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.208 seconds
-Real time usage: 0.543 seconds
-Preprocessor visited node count: 1546/1000000
+CPU time usage: 0.232 seconds
+Real time usage: 0.300 seconds
+Preprocessor visited node count: 1545/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -746,19 +743,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  186.979      1 -total
-  9.43%   17.625     10 Template:Code
-  7.68%   14.352     19 Template:True
-  7.00%   13.089     10 Template:CheckBox
-  6.04%   11.292      8 Template:RadioButton
-  5.73%   10.713     25 Template:Button
-  5.18%    9.680     44 Template:LineEdit
-  3.59%    6.720      1 Template:CodeDownload
-  3.33%    6.220      4 Template:ComboBox
-  3.21%    6.002      1 Template:Caption
+100.00%   72.038      1 -total
+  8.33%    6.000     10 Template:Code
+  7.46%    5.373      8 Template:RadioButton
+  7.11%    5.123      1 Template:Macro/de
+  6.01%    4.329      1 Template:Codeextralink
+  5.79%    4.172      1 Template:CodeDownload
+  3.69%    2.658     44 Template:LineEdit
+  3.57%    2.572     10 Template:CheckBox
+  3.43%    2.470      1 Template:Caption
+  3.12%    2.250      5 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119003850 and revision id 1740889. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004026 and revision id 1740891. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
