--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -320,7 +320,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_13:_Tabellenerstellung">Abschnitt 13: Tabellenerstellung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_SpreedSheet_00.png&amp;filetimestamp=20230901201427&amp;.html" class="mw-file-description" title="FCInfo Tabelle"><img alt="FCInfo Tabelle" src="../File/Macro_FCInfo_SpreedSheet_00.png" decoding="async" width="465" height="159" class="mw-file-element" data-file-width="465" data-file-height="159"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">SpreadSheet</span>&nbsp;: Erstellt eine neue Kalkulationstabelle in einem Dokument.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">SpreadSheet</span>&nbsp;: die aktuelle Kalkulationstabelle. Wenn die Kalkulationstabelle nicht existiert, wird eine Kalkulationstabelle erstellt.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Refresh</span>&nbsp;: Die Liste der Kalkulationstabellen im Dokument aktualisieren.</li>
@@ -331,7 +330,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Comma<span></span></span>&nbsp;: Das Trennzeichen ist ein Komma.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Semicolon<span></span></span>&nbsp;: Das Trennzeichen ist das Semikolon.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Space<span></span></span>&nbsp;: Das Trennzeichen ist ein Leerzeichen.</li></ul>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Optionen zum Speichern (<b>Save</b>) oder &Ouml;ffnen (<b>Read</b>) von Tabellen mit unterschiedlichen Trennzeichen wie Tab, Komma, Semikolon, Leerzeichen<br>
 Tab(ulation) ist das Trennzeichen f&uuml;r FreeCADs Arbeitsbereich [Spreadsheet_Workbench/de|Spreadsheet]<br>
@@ -721,13 +719,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119004133
+Cached time: 20260119004237
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.198 seconds
-Real time usage: 0.335 seconds
-Preprocessor visited node count: 1543/1000000
+CPU time usage: 0.214 seconds
+Real time usage: 0.309 seconds
+Preprocessor visited node count: 1542/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -737,19 +735,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.380      1 -total
-  7.51%    6.484      1 Template:Macro/de
-  6.18%    5.339      8 Template:RadioButton
-  6.12%    5.289     44 Template:LineEdit
-  5.67%    4.900     10 Template:Code
-  5.26%    4.546      1 Template:Codeextralink
-  4.06%    3.508      3 Template:Incode
-  4.03%    3.483      5 Template:SpinBox
-  3.82%    3.302     10 Template:CheckBox
-  3.57%    3.081      4 Template:ComboBox
+100.00%  106.307      1 -total
+  6.82%    7.249     44 Template:LineEdit
+  6.28%    6.674     10 Template:CheckBox
+  5.57%    5.925     10 Template:Code
+  5.34%    5.674      8 Template:RadioButton
+  5.01%    5.329      1 Template:Macro/de
+  4.98%    5.299      1 Template:Codeextralink
+  4.17%    4.431      4 Template:ComboBox
+  3.75%    3.982      5 Template:Clear
+  3.49%    3.708      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004132 and revision id 1740895. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004237 and revision id 1740897. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
