--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -342,7 +342,6 @@ Wenn eine alte Kalkulationstabelle umgewandelt werden soll: Diese in FCInfo &oum
 <h3><span class="mw-headline" id="Abschnitt_14:_Hauptwerkzeuge">Abschnitt 14: Hauptwerkzeuge</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Main_00.png&amp;filetimestamp=20230901201457&amp;.html" class="mw-file-description" title="FCInfo Hauptwerkzeuge"><img alt="FCInfo Hauptwerkzeuge" src="../File/Macro_FCInfo_Main_00.png" decoding="async" width="466" height="180" class="mw-file-element" data-file-width="466" data-file-height="180"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Info<span></span></span>&nbsp;: Wenn dieses Kontrollk&auml;stchen aktiviert ist, werden die Informationen im Ausgabefenster angezeigt.</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Point<span></span></span>&nbsp;: Wenn diese Option aktiviert ist, wird ein Punkt in der angezeigten Koordinatenform erstellt&nbsp;: <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b></li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Axis<span></span></span>&nbsp;: Wenn diese Option aktiviert ist, wird eine Achse in der angezeigten Koordinatenform erstellt&nbsp;: <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b></li>
@@ -351,16 +350,15 @@ Wenn eine alte Kalkulationstabelle umgewandelt werden soll: Diese in FCInfo &oum
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clip-B1<span></span></span>&nbsp;: Wenn diese Option aktiviert ist, werden die Koordinaten dieser Form in die Zwischenablage kopiert&nbsp;: <b>FreeCAD.Vector(X.0, Y.0, Z.0)</b> FreeCAD model</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clip-B2<span></span></span>&nbsp;: Wenn diese Option aktiviert ist, werden die Koordinaten in die Zwischenablage kopiert. Format: <b>X, Y, Z</b> mit Komma als Trennzeichen</li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clip-B3<span></span></span>&nbsp;: Wenn diese Option aktiviert ist, werden die Koordinaten in die Zwischenablage kopiert. Format: <b>X Y Z</b> mit Leerzeichen als Trennzeichen</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Left/Right<span></span></span>&nbsp;: Wenn dieses Kontrollk&auml;stchen nicht aktiviert ist, werden die Fenstermakros rechts angezeigt (Standard). Wenn es aktiviert ist, werden die Fenstermakros links angezeigt. Wenn die Option &bdquo;1 mode fly&rdquo; (Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCInfo/<b>seTPositionFlyRightLeft</b>) aktiviert ist, ist diese Schaltfl&auml;che nicht sichtbar.</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4 (Decimales)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Die Anzahl der angezeigten Dezimalstellen angeben.</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">12 (Dim. texte)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Die Gr&ouml;&szlig;e der Texte im Makro angeben.</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Left/Right<span></span></span>&nbsp;: Wenn dieses Kontrollk&auml;stchen nicht aktiviert ist, wird das Makrofenster rechts angezeigt (Standard). Wenn es aktiviert ist, wird das Makrofenster links angezeigt. Wenn die Option &bdquo;1 mode fly&rdquo; (Benutzerparameter: BaseApp/Preferences/Macros/FCMmacros/FCInfo/<b>seTPositionFlyRightLeft</b>) aktiviert ist, ist diese Schaltfl&auml;che nicht sichtbar.</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4 (Decimales)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Gibt die Anzahl der angezeigten Dezimalstellen an.</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">12 (Dim. texte)  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Gibt die Gr&ouml;&szlig;e der Texte im Makro an.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Forum</span> &nbsp;: Richtung FCInfo-Forum-Thread <i>(Man muss mit dem Internet verbunden sein)</i></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Wiki</span>&nbsp;: Richtung Wiki FCInfo <i>(Man muss mit dem Internet verbunden sein)</i></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Ref</span> &nbsp;: Aktualisiert die Anzeige von Daten im Ausgabefenster</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>&nbsp;: Das Makro ordnungsgem&auml;&szlig; beenden. <i>(Nicht das rote Kreuz des Fensters verwenden)</i></li></ul>
-<p><i>(Die Variable <b>switch_setVisible_GBox_014_Main_Tools</b> auf <code>false</code> setzen, um den Rahmen auszublenden)</i>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>&nbsp;: Verl&auml;sst das Makro ordnungsgem&auml;&szlig;. <i>(Nicht das rote Kreuz des Fensters verwenden)</i></li></ul>
+<p><i>(Die Variable <b>switch_setVisible_GBox_014_Main_Tools</b> auf <code>false</code> setzen, um die Tafel auszublenden)"</i>
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Nach dem Starten des Makros bleibt das Makro aktiv und das Fenster bleibt sichtbar. Zum Verlassen des Makros <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> dr&uuml;cken. Wird das Makro &uuml;ber die Kreuz-Schaltfl&auml;che verlassen, bleibt das Makro im Speicher und die Daten werden im "Ausgabefenster" von FreeCAD angezeigt; jetzt muss FreeCAD neu gestartet werden, um es zu verlassen.
 </p>
@@ -716,13 +714,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119004444
+Cached time: 20260119005147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.225 seconds
-Real time usage: 0.284 seconds
-Preprocessor visited node count: 1541/1000000
+CPU time usage: 0.220 seconds
+Real time usage: 0.448 seconds
+Preprocessor visited node count: 1540/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -732,19 +730,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.098      1 -total
-  6.47%    5.180     10 Template:Code
-  5.53%    4.428     10 Template:CheckBox
-  5.30%    4.244      5 Template:SpinBox
-  4.92%    3.940     44 Template:LineEdit
-  4.88%    3.912      1 Template:Macro/de
-  4.18%    3.345      1 Template:Codeextralink
-  3.96%    3.170      8 Template:RadioButton
-  3.83%    3.067      3 Template:Incode
-  3.63%    2.909      1 Template:Caption
+100.00%  163.380      1 -total
+  6.38%   10.420     10 Template:Code
+  5.48%    8.950     44 Template:LineEdit
+  5.23%    8.544      8 Template:RadioButton
+  4.25%    6.951     10 Template:CheckBox
+  3.06%    4.993      4 Template:ComboBox
+  2.74%    4.479      1 Template:CodeDownload
+  2.62%    4.285     30 Template:False
+  2.47%    4.040     19 Template:True
+  2.04%    3.339      1 Template:Macro/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119004443 and revision id 1740899. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005147 and revision id 1740901. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
